shivraj-cloudops-site/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-frontend
  namespace: default
  labels:
    app: website-frontend
spec:
  selector:
    app: website-frontend
  ports:
    - name: http
      port: 80
      targetPort: http
